[project]
name = "agentscope-runtime"
version = "1.0.1"
description = "A production-ready runtime framework for agent applications, providing secure sandboxed execution environments and scalable deployment solutions with multi-framework support."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "agentscope>=1.0.9",
    "docker>=7.1.0",
    "redis>=6.0.0",
    "oss2>=2.19.1",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.0.1",
    "kubernetes>=33.1.0",
    "shortuuid>=1.0.13",
    "celery[redis]>=5.3.1",
    "a2a-sdk>=0.3.0",
    "jinja2",
    "psutil",
    "dashscope>=1.25.0",
    "jsonref",
    "asgiref",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
include-package-data = true

[tool.setuptools.package-data]
"agentscope_runtime.engine.deployers.utils.templates" = ["*.j2"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
runtime-sandbox-mcp = "agentscope_runtime.sandbox.mcp_server:main"
runtime-sandbox-server = "agentscope_runtime.sandbox.manager.server.app:main"
runtime-sandbox-builder = "agentscope_runtime.sandbox.build:main"
runtime-fc-deploy = "agentscope_runtime.engine.deployers.cli_fc_deploy:main"
modelstudio-mcp-server = "agentscope_runtime.tools.cli.modelstudio_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=4.2.0",
    "jupyter-book>=1.0.4.post1,<2.0.0",
    "furo>=2025.7.19",
    "pytest-cov>=6.2.1",
    "fakeredis>=2.31.0",
    "sphinx-autoapi>=3.6.0",
    "pytest-mock>=3.15.1",
    "sphinxcontrib-mermaid>=1.2.3",
    "langgraph>=0.4.0",
    "autogen-agentchat>=0.7.0",
]

ext = [
    "reme-ai>=0.2.0.2",
    "mem0ai>=0.1.117",
    "alibabacloud-agentrun20250910>=2.0.1",
    "alibabacloud_tea_openapi>=0.4.0",
    "alibabacloud-fc20230330>=4.4.0",
    "tablestore-for-agent-memory>=1.1.0",
    "langchain-community>=0.3.27",
    "wuying-agentbay-sdk>=0.5.0",
    "alipay-sdk-python",
    "cryptography",
    "gunicorn>=20.0.0",
    "starlette>=0.37.0",
    "asgiref>=3.11.0",
    "azure-cognitiveservices-speech>=1.47.0",
    "alibabacloud-oss-v2",
    "alibabacloud-bailian20231229>=2.6.0",
    "build",
    "setuptools>=40.8.0",
    "wheel",
    "alibabacloud-credentials",
    "PyYAML",
]
